--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
-  "name": "week6",
+  "name": "week6-team3-mini",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "jest",
+      "start": "nodemon app.js",
+      "format": "prettier --cache --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+      "bcrypt": "^5.1.0",
+      "cookie-parser": "^1.4.6",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "joi": "^17.6.3",
+      "jsonwebtoken": "^8.5.1",
+      "mysql2": "^2.3.3",
+      "sequelize": "^6.25.2",
+      "sequelize-cli": "^6.5.1"
+  },
+  "devDependencies": {
+      "jest": "^29.2.1",
+      "morgan": "^1.10.0",
+      "nodemon": "^2.0.20",
+      "prettier": "^2.7.1"
   }
 }
