--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "화이팅!!!!!!!!!!!!!!!!!!!!!!!!!! 화이팅~!~!~!~!",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
