--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
       "test": "jest",
-      "start": "nodemon app.js",
+      "start": "nodemon src/app.js",
       "format": "prettier --cache --write ."
   },
   "keywords": [],
